--- a/account.html
+++ b/account.html
@@ -519,7 +519,7 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <script>
-    ptengine.track('我的账户',{'时间发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href});
+    ptengine.track('我的账户',{'事件发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href});
   </script>
 
   <!-- 头部导航 -->
@@ -1094,7 +1094,7 @@
       
       // Ptengine 事件追踪
       ptengine.track('用户登录', {
-        '时间发生时间戳': loginTimestamp,
+        '事件发生时间戳': loginTimestamp,
         '事件发生时间': loginTime,
         '事件发生的url': document.location.href,
         '用户邮箱': email,
@@ -1122,7 +1122,7 @@
     function handleLogout() {
       // Ptengine 事件追踪
       ptengine.track('用户退出', {
-        '时间发生时间戳': Date.now(),
+        '事件发生时间戳': Date.now(),
         '事件发生时间': new Date().toLocaleString(),
         '事件发生的url': document.location.href
       });
