--- a/order-success.html
+++ b/order-success.html
@@ -307,7 +307,13 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <script>
-    ptengine.track('订单成功',{'事件发生时间戳':Date.now(),'事件发生时间':new Date().toLocaleString(),'事件发生的url':document.location.href});
+    ptengine.track('订单成功',{
+      '事件发生时间戳': Date.now(),
+      '事件发生时间': new Date().toLocaleString(),
+      '事件发生的url': document.location.href,
+      '页面标题': document.title,
+      '来源': document.referrer || '直接访问'
+    });
   </script>
 
   <!-- 头部导航 -->
