--- a/order-success.html
+++ b/order-success.html
@@ -507,6 +507,7 @@
   </footer>
 
   <script src="/js/common.js"></script>
+  <script src="/js/tracking.js"></script>
   <script>
     // 配送方式映射
     const shippingMethodMap = {
