Fix script tag syntax in meili.html

--- a/meili.html
+++ b/meili.html
@@ -9,7 +9,7 @@
   })(window,document,'script','dataLayer','GTM-TTPBR7L');</script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8Z5LM4WKJ5"></script>
-<script src="https://devjs.ptengine.com/19ky1yoe.js">
+<script src="https://devjs.ptengine.com/19ky1yoe.js"></script>
 
 <script>
   window._pt_sp_2 = [];
