--- a/meili.html
+++ b/meili.html
@@ -49,6 +49,11 @@
        <H5>meili</H5>
     <a href="https://www.ptengine.jp/contact_us/" target="_self" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ">お問い合わせ</a>
     </div>
+    <div >
+
+       <H5>meili</H5>
+    <a href="https://www.ptengine.jp/contact_us/" target="_self" rel="noopener noreferrer" class="Foot___NavItemA-sc-15y30se-5 eOvXuJ">お問い合わせ</a>
+    </div>
    
   </body>
 </html>
