--- a/index.html
+++ b/index.html
@@ -819,6 +819,7 @@
           <span></span>
         </button>
         <nav class="nav" id="mainNav">
+          <a href="https://www.ptengine.jp" class="active">ptengine</a>
           <a href="index.html" class="active">首页</a>
           <a href="products.html">全部商品</a>
           <a href="cart.html" class="cart-icon">
