--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.amplitude.com/script/92be23a58f32a14b496d02c34c2cc0f5.js"></script>
   <script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('92be23a58f32a14b496d02c34c2cc0f5', {"fetchRemoteConfig":true,"autocapture":{"attribution":true,"fileDownloads":true,"formInteractions":true,"pageViews":true,"sessions":true,"elementInteractions":true,"networkTracking":true,"webVitals":true,"frustrationInteractions":true}});</script>
   <script src="https://devjs.ptengine.com/7a80pnx3.js"></script>
-
+   <script src="https://js.ptengine.jp/566d12f9.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="PTmeili - 发现优质商品，享受精致生活">
